Image is now properly shown on start.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <image style="display: none" id="base" src="background.png">
-  <textarea rows="4" cols="50" onkeyup="update(this.value)"></textarea>
+  <textarea rows="4" cols="50" onkeyup="update(this.value)"></textarea></br>
   <canvas id="canvas"></canvas>
 
   <script src="app.js"></script>
