Added support to save generated images.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <image style="display: none" id="base" src="background.png">
   <textarea rows="4" cols="50" onkeyup="update(this.value)"></textarea></br>
   <canvas id="canvas"></canvas>
+  <button onclick="save()">Save</button>
 
+  <script src="request.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
